# crab-in-the-code

./: .gitignore  CMakeLists.txt
include/: crab_in_the_code.hpp
src/inc/crab-in-the-code-hpp/: crab-in-the-code.hpp
src/src/crab_in_the_code_hpp/: crab_in_the_code.cpp
